[package]
name = "tsfind"
license = "MIT"
edition = "2021"
version = "0.2.0"

[dependencies]
bstr = "1.10.0"
clap = { version = "4.5.15", features = ["derive"] }
color-eyre = "0.6.3"
ignore = { version = "0.4.22", features = ["simd-accel"] }
memmap2 = "0.9.4"
parking_lot = "0.12.3"
tree-sitter = "0.22"
tree-sitter-go = "0.21"
tree-sitter-javascript = "0.21.4"
tree-sitter-php = "0.22.8"
tree-sitter-rust = "0.21.2"
tree-sitter-typescript = "0.21.2"
unescaper = "0.1.5"

[build-dependencies]
cc = "*"
