[package]
name = "tsfind"
license = "MIT"
edition = "2021"
version = "0.2.1"

[dependencies]
bstr = "1.10.0"
clap = { version = "4.5.15", features = ["derive"] }
color-eyre = "0.6.3"
ignore = { version = "0.4.22", features = ["simd-accel"] }
memmap2 = "0.9.4"
parking_lot = "0.12.3"
tree-sitter = "0.22"
tree-sitter-rust = { version = "0.21.2", optional = true }
tree-sitter-go = { version = "0.21", optional = true }
tree-sitter-javascript = { version = "0.21.4", optional = true }
tree-sitter-typescript = { version = "0.21.2", optional = true }
tree-sitter-php = { version = "0.22.8", optional = true }
unescaper = "0.1.5"

[features]
default = ["rust", "go", "javascript", "typescript", "php"]
rust = ["dep:tree-sitter-rust"]
go = ["dep:tree-sitter-go"]
javascript = ["dep:tree-sitter-javascript"]
typescript = ["dep:tree-sitter-typescript"]
php = ["dep:tree-sitter-php"]

[build-dependencies]
cc = "*"
