[package]
name = "tsfind"
description = "Extract code using tree-sitter queries"
license = "MIT"
edition = "2021"
version = "0.2.7"
readme = "README.md"
homepage = "https://github.com/Vonr/tsfind"
repository = "https://github.com/Vonr/tsfind"
keywords = ["command-line", "tree-sitter", "language", "query"]
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
bstr = "1"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.3"
ignore = "0.4"
memmap2 = "0.9"
parking_lot = "0.12"
tree-sitter = "0.23"
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.23", optional = true }
unescaper = "0.1.5"

[features]
default = ["rust", "go", "javascript", "typescript", "php"]
rust = ["dep:tree-sitter-rust"]
go = ["dep:tree-sitter-go"]
javascript = ["dep:tree-sitter-javascript"]
typescript = ["dep:tree-sitter-typescript"]
php = ["dep:tree-sitter-php"]

[build-dependencies]
cc = "1"
